_R_: hopefully fix for BlinkForms2 columns, now saving result from Location field to hidden input element, (temporarily) moving navigation bar instantly, fix for button styles on iOS

--- a/public_html/_R_/ios/3/ios.css
+++ b/public_html/_R_/ios/3/ios.css
@@ -7,13 +7,17 @@ body, nav {
 }
 
 td {
-	padding: 4px;
+	padding: 2px;
 }
 
 textarea, input[type=text], input[type=email], input[type=url], input[type=tel], input[type=password] {
 	padding: 4px;
 	border: 1px solid #AAAAAA;
 	-webkit-border-radius: 4px;
+}
+
+button, [type=button], [type=submit], [type=reset] {
+	background-color: #FFF;
 }
 
 .bForm-results {
